--- a/kview/doc/Makefile.in
+++ b/kview/doc/Makefile.in
@@ -1,7 +1,7 @@
 FILES =  kview.html kview.gif
 
 DOCDIR = @prefix@/doc/HTML
-INSTALL_DIR = @mkinstalldirs@
+INSTALL_DIR = @INSTALL@ -d -m 0755
 INSTALL_DATA = @INSTALL@ -m 644
 
 all:
