added --enable-kscreensaver changed the order of libraries in most Makefiles

--- a/kghostview/Makefile.in
+++ b/kghostview/Makefile.in
@@ -10,7 +10,7 @@ MOC	= @MOC@
 INCFL	= @all_includes@ -I. -I..
 CXXFLAGS += $(INCFL) -DHAVE_CONFIG_H
 CFLAGS = -O2 -Wall $(INCFL) -DHAVE_CONFIG_H
-LDFLAGS = @all_libraries@ -L. -lqt -lkdecore -lX11 -lXext -lm
+LDFLAGS = @all_libraries@ -L. -lkdecore -lqt -lX11 -lXext -lm
 
 ############# Install ##############
 
