--- a/kview/Makefile.in
+++ b/kview/Makefile.in
@@ -24,7 +24,7 @@ LLIBPNG= -lpng -lz
 
 prefix  = @prefix@
 BINPATH = $(prefix)/bin/
-LNKPATH = $(prefix)/lib/applications/Productivity
+LNKPATH = $(prefix)/apps/Utilities
 
 # needs to be changed if you make srcdoc (requires DOC++)
 
