--- a/kghostview/Makefile.in
+++ b/kghostview/Makefile.in
@@ -10,7 +10,7 @@ MOC	= @MOC@
 INCFL	= @all_includes@ -I. -I..
 CXXFLAGS = @CXXFLAGS@ $(INCFL) -DHAVE_CONFIG_H
 CFLAGS = @CFLAGS@ $(INCFL) -DHAVE_CONFIG_H
-LDFLAGS = @LDFLAGS@ @all_libraries@ -L. -lkdecore -lqt -lX11 -lXext -lm
+LDFLAGS = @LDFLAGS@ @all_libraries@ -L. -lkdecore -lkdeui -lqt -lX11 -lXext -lm
 
 ############# Install ##############
 
@@ -23,8 +23,8 @@ BINDIR = $(prefix)/bin
 LIBDIR = $(prefix)/lib
 PICSDIR = $(LIBDIR)/pics/toolbar
 DOCSDIR = $(prefix)/doc/HTML/kghostview
-
-DEFS = -DPICS_PATH=\"$(PICSDIR)/\" -DDOCS_PATH=\"$(DOCSDIR)/\"
+APPSDIR = $(prefix)/apps
+GRAPHICSDIR = $(APPSDIR)/Applications
 
 ########## Implicit Rules ##########
 
@@ -38,10 +38,10 @@ DEFS = -DPICS_PATH=\"$(PICSDIR)/\" -DDOCS_PATH=\"$(DOCSDIR)/\"
 
 ########## Files ##########
 
-SRCS = kpushbt.cpp print.cpp goto.cpp viewcontrol.cpp main.cpp kghostview.cpp kpswidget.cpp ps.c
-SRCMETA = kpushbt.moc print.moc goto.moc viewcontrol.moc kghostview.moc kpswidget.moc
-HDRS = kpushbt.h print.h goto.h viewcontrol.h kghostview.h kpswidget.h ps.h
-OBJS = kpushbt.o print.o goto.o viewcontrol.o main.o kghostview.o kpswidget.o ps.o
+SRCS = messages.cpp info.cpp print.cpp goto.cpp viewcontrol.cpp main.cpp kghostview.cpp kpswidget.cpp ps.c
+SRCMETA = messages.moc info.moc print.moc goto.moc viewcontrol.moc kghostview.moc kpswidget.moc
+HDRS = messages.h info.h print.h goto.h viewcontrol.h kghostview.h kpswidget.h ps.h
+OBJS = messages.o info.o print.o goto.o viewcontrol.o main.o kghostview.o kpswidget.o ps.o
 
 TARGET = kghostview
 
@@ -52,15 +52,18 @@ all: $(TARGET)
 $(TARGET): $(SRCMETA) $(OBJS)
 	$(CXX) -o $(TARGET) $(OBJS) $(LDFLAGS)
 
-install:
+install: all
 	[ -d $(BINDIR) ] || $(INSTALL_DIR) $(BINDIR)
 	$(INSTALL) $(TARGET) $(BINDIR)
 	[ -d $(DOCSDIR) ] || $(INSTALL_DIR) $(DOCSDIR)
-	$(INSTALL_DATA) ./doc/kghostview.html $(DOCSDIR)
+	(cd doc && $(MAKE) install)
+	$(INSTALL_DIR) $(GRAPHICSDIR)
+	$(INSTALL_DATA) ./apps/Graphics/KGhostview.kdelnk $(GRAPHICSDIR)
 
 uninstall:
 	rm -f $(BINDIR)/$(TARGET)
-	rm -f $(DOCSDIR)/kghostview.html
+	(cd doc && $(MAKE) uninstall)
+	rm -f $(GRAPHICSDIR)/KGhostview.kdelnk
 
 clean:
 	rm -f core *~ *.bak *.BAK $(SRCMETA) $(OBJS) $(TARGET)
