Coolo: changed all Makefiles (depencies for Makefile.in and install: all) replaced KPixmap by QPixmap (Kalle, you can remove it!) in all apps.

--- a/kghostview/Makefile.in
+++ b/kghostview/Makefile.in
@@ -49,6 +49,9 @@ TARGET = kghostview
 
 all: $(TARGET)
 
+Makefile: Makefile.in
+	cd .. && CONFIG_FILES=kghostview/$@ CONFIG_HEADERS= $(SHELL) ./config.status
+
 $(TARGET): $(SRCMETA) $(OBJS)
 	$(CXX) -o $(TARGET) $(OBJS) $(LDFLAGS)
 
