--- a/kghostview/Makefile.in
+++ b/kghostview/Makefile.in
@@ -10,7 +10,7 @@ MOC	= @MOC@
 INCFL	= @all_includes@ -I. -I..
 CXXFLAGS = @CXXFLAGS@ $(INCFL) -DHAVE_CONFIG_H
 CFLAGS = @CFLAGS@ $(INCFL) -DHAVE_CONFIG_H
-LDFLAGS = @LDFLAGS@ @all_libraries@ -L. -lkdecore -lkdeui -lqt -lX11 -lXext -lm
+LDFLAGS = @LDFLAGS@ @all_libraries@ -L. -lkfm -lkdecore -lkdeui -lqt -lX11 -lXext -lm
 
 ############# Install ##############
 
@@ -38,10 +38,10 @@ GRAPHICSDIR = $(APPSDIR)/Applications
 
 ########## Files ##########
 
-SRCS = messages.cpp info.cpp print.cpp goto.cpp viewcontrol.cpp main.cpp kghostview.cpp kpswidget.cpp ps.c
-SRCMETA = messages.moc info.moc print.moc goto.moc viewcontrol.moc kghostview.moc kpswidget.moc
-HDRS = messages.h info.h print.h goto.h viewcontrol.h kghostview.h kpswidget.h ps.h
-OBJS = messages.o info.o print.o goto.o viewcontrol.o main.o kghostview.o kpswidget.o ps.o
+SRCS = copyright.cpp interpreter.cpp messages.cpp info.cpp print.cpp goto.cpp viewcontrol.cpp main.cpp kghostview.cpp kpswidget.cpp ps.c
+SRCMETA = copyright.moc interpreter.moc messages.moc info.moc print.moc goto.moc viewcontrol.moc kghostview.moc kpswidget.moc
+HDRS = copyright.h interpreter.h messages.h info.h print.h goto.h viewcontrol.h kghostview.h kpswidget.h ps.h
+OBJS = copyright.o interpreter.o messages.o info.o print.o goto.o viewcontrol.o main.o kghostview.o kpswidget.o ps.o
 
 TARGET = kghostview
 
@@ -62,6 +62,8 @@ install: all
 	(cd doc && $(MAKE) install)
 	$(INSTALL_DIR) $(GRAPHICSDIR)
 	$(INSTALL_DATA) ./apps/Graphics/KGhostview.kdelnk $(GRAPHICSDIR)
+	$(INSTALL_DIR) $(PICSDIR)
+	$(INSTALL_DATA) ./flag.xpm $(PICSDIR)
 
 uninstall:
 	rm -f $(BINDIR)/$(TARGET)
