--- a/kghostview/Makefile.in
+++ b/kghostview/Makefile.in
@@ -7,7 +7,7 @@
 CXX	= @CXX@
 CC	= @CC@
 MOC	= @MOC@
-INCFL	= @all_includes@ -I. -I..
+INCFL	= @all_includes@ -I. -I.. -I../kfm/libkfm
 CXXFLAGS = @CXXFLAGS@ $(INCFL) -DHAVE_CONFIG_H
 CFLAGS = @CFLAGS@ $(INCFL) -DHAVE_CONFIG_H
 LDFLAGS = @LDFLAGS@ @all_libraries@ -L. -lkfm -lkdecore -lkdeui -lqt -lX11 -lXext -lm
