Coolo: Sorry, my fault. the depency of the Makefile was a little bit buggy

--- a/kghostview/doc/Makefile.in
+++ b/kghostview/doc/Makefile.in
@@ -9,7 +9,7 @@ INSTALL_DATA = @INSTALL@ -m 644
 all:
 
 Makefile: Makefile.in
-	cd .. && CONFIG_FILES=kghostview/doc/$@ CONFIG_HEADERS= $(SHELL) ./config.status
+	cd ../.. && CONFIG_FILES=kghostview/doc/$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
 install:
 	$(INSTALL_DIR) $(DOCSDIR)
