--- a/kview/doc/Makefile.in
+++ b/kview/doc/Makefile.in
@@ -1,4 +1,4 @@
-FILES =  kview.html kview.gif toolbar1.gif toolbar2.gif
+FILES =  kview.html kview.gif toolbar1.xpm toolbar2.xpm
 
 DOCDIR = @prefix@/doc/HTML/kview
 INSTALL_DIR = @INSTALL@ -d -m 0755
