--- a/kghostview/Makefile.in
+++ b/kghostview/Makefile.in
@@ -21,10 +21,11 @@ INSTALL_DIR = @INSTALL@ -d -m 0755
 prefix = @prefix@
 BINDIR = $(prefix)/bin
 LIBDIR = $(prefix)/lib
-PICSDIR = $(LIBDIR)/pics/toolbar
-DOCSDIR = $(prefix)/doc/HTML/kghostview
-APPSDIR = $(prefix)/apps
-GRAPHICSDIR = $(APPSDIR)/Applications
+SHAREDIR=$(prefix)/share
+ICONDIR = $(SHAREDIR)/icons
+DOCSDIR = $(SHAREDIR)/doc/default/HTML/kghostview
+KDELNKDIR = $(SHAREDIR)/Graphics/applnk
+
 
 ########## Implicit Rules ##########
 
@@ -38,10 +39,10 @@ GRAPHICSDIR = $(APPSDIR)/Applications
 
 ########## Files ##########
 
-SRCS = copyright.cpp interpreter.cpp messages.cpp info.cpp print.cpp goto.cpp viewcontrol.cpp main.cpp kghostview.cpp kpswidget.cpp ps.c
-SRCMETA = copyright.moc interpreter.moc messages.moc info.moc print.moc goto.moc viewcontrol.moc kghostview.moc kpswidget.moc
-HDRS = copyright.h interpreter.h messages.h info.h print.h goto.h viewcontrol.h kghostview.h kpswidget.h ps.h
-OBJS = copyright.o interpreter.o messages.o info.o print.o goto.o viewcontrol.o main.o kghostview.o kpswidget.o ps.o
+SRCS = marklist.cpp copyright.cpp interpreter.cpp messages.cpp info.cpp print.cpp goto.cpp viewcontrol.cpp main.cpp kghostview.cpp kpswidget.cpp ps.c
+SRCMETA = marklist.moc copyright.moc interpreter.moc messages.moc info.moc print.moc goto.moc viewcontrol.moc kghostview.moc kpswidget.moc
+HDRS = marklist.h copyright.h interpreter.h messages.h info.h print.h goto.h viewcontrol.h kghostview.h kpswidget.h ps.h
+OBJS = marklist.o copyright.o interpreter.o messages.o info.o print.o goto.o viewcontrol.o main.o kghostview.o kpswidget.o ps.o
 
 TARGET = kghostview
 
@@ -60,15 +61,14 @@ install: all
 	$(INSTALL) $(TARGET) $(BINDIR)
 	[ -d $(DOCSDIR) ] || $(INSTALL_DIR) $(DOCSDIR)
 	(cd doc && $(MAKE) install)
-	$(INSTALL_DIR) $(GRAPHICSDIR)
-	$(INSTALL_DATA) ./apps/Graphics/KGhostview.kdelnk $(GRAPHICSDIR)
-	$(INSTALL_DIR) $(PICSDIR)
-	$(INSTALL_DATA) ./flag.xpm $(PICSDIR)
+	$(INSTALL_DIR) $(KDELNKDIR)
+	$(INSTALL_DATA) kghostview.kdelnk $(KDELNKDIR)
+
 
 uninstall:
 	rm -f $(BINDIR)/$(TARGET)
 	(cd doc && $(MAKE) uninstall)
-	rm -f $(GRAPHICSDIR)/KGhostview.kdelnk
+	rm -f $(KDELNKDIR)/kghostview.kdelnk
 
 clean:
 	rm -f core *~ *.bak *.BAK $(SRCMETA) $(OBJS) $(TARGET)
