Updated for kfsstd

--- a/kpaint/doc/Makefile.in
+++ b/kpaint/doc/Makefile.in
@@ -6,14 +6,14 @@ INSTALL_DIR = @INSTALL@ -d -m 755
 INSTALL_DATA= @INSTALL@ -m 644
 
 DOCS=	kpaint.html \
-       	index.html \
-       	Technic.gif
+	index.html \
+	Technic.gif
 
 .PHONY:	install
 
 install:
-	$(INSTALL_DIR) $(prefix)/doc/HTML/kpaint
-	$(INSTALL_DATA) $(DOCS) $(prefix)/doc/HTML/kpaint
+	$(INSTALL_DIR) $(prefix)/share/doc/HTML/kpaint
+	$(INSTALL_DATA) $(DOCS) $(prefix)/share/doc/HTML/kpaint
 
 
 
