--- a/kfax/docs/Makefile.in
+++ b/kfax/docs/Makefile.in
@@ -1,6 +1,6 @@
-FILES = kfax-1.html kfax-2.html kfax-3.html kfax-4.html kfax-5.html kfax-6.html kfax.html 
+FILES = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html 
 
-DOCDIR = @prefix@/share/doc/HTML/kfax
+DOCDIR = @prefix@/share/doc/HTML/en/kfax
 INSTALL_DIR = @INSTALL@ -d -m 0755
 INSTALL_DATA = @INSTALL@ -m 644
 
