--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -2,6 +2,7 @@ all:
 	@echo "This Makefile is only for the CVS repository"
 	@echo "I will delete it before making the distribution"
 	@echo ""
+	cat acinclude.m4.in libtool.m4.in > acinclude.m4
 	cp configure.in.1 configure.in
 	aclocal 
 	autoheader
@@ -23,6 +24,7 @@ all:
 
 dist:
 	@cp configure.in.1 configure.in ;\
+	cat acinclude.m4.in libtool.m4.in > acinclude.m4 ;\	
 	aclocal ;\
 	autoheader ;\
 	cat configure.in.1 > configure.in ;\
